# Tutorial-Codebase-Knowledge-Project-PocketFlow

./: .env.example  .gitignore  DOCKER_QUICK_START.md  Dockerfile  MERMAID_FIX_DEBUG.md  MERMAID_SUPPORT.md  MONITORING.md  PROMETHEUS_GRAFANA.md  README.md  SETUP_METHODS_COMPARISON.md  WEB_APP_README.md  app.py  docker-compose.yml  nodes.py  pyproject.toml  requirements-app.txt  requirements.txt  requirements_new.txt  run.bat  run.sh  run_app.py  test_mermaid.py  try.ipynb
github_crawler/: README.md  cargo.toml  project.toml
github_crawler/src/: lib.rs
monitoring/: prometheus.yml
output/Analysis-Of-Algorithm/: 01_sorting_algorithms_.md  02_minimum_spanning_tree__mst__algorithms_.md  03_shortest_path_algorithms_.md  04_backtracking_algorithms_.md  05_dynamic_programming_.md  06_string_matching_algorithms_.md  index.md
output/Eog-Data/: 01_hardware_platform__esp32_based__.md  02_eye_movement_data_acquisition_.md  03_eye_movement_patterns__eog_data__.md  04_eog_signal_analysis_model__tflite__.md  05_output_handling_.md  index.md
output/NHITM_Classboard/: index.md  (+6 more)
rust_tools/: Cargo.toml
rust_tools/src/: analyze_relationships.rs  call_local_files.rs  fetch_repo.rs  github_crawler.rs  identify_abstractions.rs  lib.rs  llm_caller.rs  main.rs  order_chapters.rs  pocketflow.rs  test.rs  tutorial_flow.rs  write_chapters.rs
static/: script.js  style.css
templates/: index.html  viewer.html
try/: context.rs  flow.rs  node.rs
utils/: call_llm.py  call_llm_rust.py  crawl_github.py  crawl_github_files.py  crawl_local_files.py  metrics.py  performance_tracker.py
(+45 files in other folders)
