# Cargo.toml
[package]
name = "rust_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.18"
tempfile = "3.8"
url = "2.5"
dotenv = "0.15"
glob = "0.3"
tokio = { version = "1", features = ["full"] }
pyo3 = { version = "0.20", features = ["extension-module"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
yaml-rust = "0.4"
clap = { version = "4.4", features = ["derive"] }
pocketflow_rs = "0.1"

[lib]
name = "rust_tools"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ai_codebase_builder"
path = "src/main.rs"
